--- a/tailwindcss/input.css
+++ b/tailwindcss/input.css
@@ -1,23 +1,23 @@
 @import "tailwindcss";
 
 .navbar {
-  @apply container md:mx-auto px-2 sm:px-6 lg:px-8 relative flex h-16 items-center;
+  @apply relative mx-auto flex h-16 max-w-7xl items-center justify-between px-4 shadow-md sm:px-6 lg:px-8;
 }
 
 .navbar-brand {
-  @apply relative flex flex-1 items-center justify-start;
-}
-
-.navbar-buttons {
-  @apply flex space-x-4;
-}
-
-.navbar-item {
-  @apply px-3 py-2 text-sm;
+  @apply flex items-center space-x-2;
 }
 
 .navbar-menu {
-  @apply flex flex-wrap h-16 w-auto items-center justify-between md:mx-auto;
+  @apply hidden flex-1 justify-end space-x-4 sm:flex;
+}
+
+.navbar-item {
+  @apply px-3 py-2 text-sm font-medium;
+}
+
+.navbar-button {
+  @apply rounded-full px-6 py-2 text-sm font-medium text-white;
 }
 
 .buttons {
